--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
                             <a href="https://www.linkedin.com/in/isuri-moses-4b63a31a5/" target="_blank" class="home__social-icon">
                                 <i class="uil uil-linkedin-alt"></i>
                             </a>
-                            <a href="https://www.behance.net/isurimoses" target="_blank" class="home__social-icon">
+                            <a href="https://github.com/Isumoses" target="_blank" class="home__social-icon">
                                 <i class="uil uil-github-alt"></i>
                             </a>
-                            <a href="https://github.com/Isumoses" target="_blank" class="home__social-icon">
+                            <a href="https://www.behance.net/isurimoses" target="_blank" class="home__social-icon">
                                 <i class="uil uil-behance"></i>
                             </a>
                         </div>
@@ -656,8 +656,8 @@
                             
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">Furniture App Design</h3>
-                                <p class="portfolio__description">Website designed for a online furniture shop for mobile phones.</p>
-                                 <a href="https://www.figma.com/file/S2bPNuiNWchaeBx5N4rFDv/Furniture-Shop-Mobile-App-Design?type=design&node-id=0-1&mode=design&t=OW7nEn3CJ0lseB1U-0" class="button button--flex button--small portfolio__button">
+                                <p class="portfolio__description">Website animation for a online furniture shop for mobile phones.</p>
+                                 <a href="https://www.figma.com/proto/wHYLxiXgSxoJIy00M0IX8s/furniture-animation?type=design&node-id=4-71&t=89yhkTdEq0XLM6uu-1&scaling=scale-down&page-id=0%3A1&starting-point-node-id=3%3A4&mode=design" class="button button--flex button--small portfolio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
                                  </a>
@@ -671,7 +671,7 @@
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">Furniture App Design</h3>
                                 <p class="portfolio__description">Website designed for a online furniture shop for mobile phones.</p>
-                                 <a href="https://www.figma.com/file/vQNk27C596J5F4BwrHmEXN/Untitled?type=design&mode=design&t=peojq4ZhNXStDtnQ-0" class="button button--flex button--small portfolio__button">
+                                 <a href="https://www.figma.com/proto/S2bPNuiNWchaeBx5N4rFDv/Furniture-Shop-Mobile-App-Design?type=design&node-id=430-166&t=6yZfh6SA19ECgE2j-1&scaling=scale-down&page-id=0%3A1&starting-point-node-id=410%3A27&mode=design" class="button button--flex button--small portfolio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
                                  </a>
