--- a/index.html
+++ b/index.html
@@ -651,13 +651,13 @@
                         </div>
 
                         <!--==================== PORTFOLIO 2 ====================-->
-                        <div class="portfolio__content grid swiper-slide">
+                       <div class="portfolio__content grid swiper-slide">
                             <img src="assets/img/portfolio2.png" alt="portfolio2" class="portfolio__img">
                             
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">Furniture App Design</h3>
-                                <p class="portfolio__description">Website animation for a online furniture shop for mobile phones.</p>
-                                 <a href="https://www.figma.com/proto/wHYLxiXgSxoJIy00M0IX8s/furniture-animation?type=design&node-id=4-71&t=89yhkTdEq0XLM6uu-1&scaling=scale-down&page-id=0%3A1&starting-point-node-id=3%3A4&mode=design" class="button button--flex button--small portfolio__button">
+                                <p class="portfolio__description">Website designed for a online furniture shop for mobile phones.</p>
+                                 <a href="https://www.figma.com/proto/wHYLxiXgSxoJIy00M0IX8s/furniture-animation?type=design&node-id=4-71&t=J5uEs11aeS27M3Ni-1&scaling=scale-down&page-id=0%3A1&starting-point-node-id=3%3A4&mode=design" class="button button--flex button--small portfolio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
                                  </a>
@@ -672,6 +672,20 @@
                                 <h3 class="portfolio__title">Furniture App Design</h3>
                                 <p class="portfolio__description">Website designed for a online furniture shop for mobile phones.</p>
                                  <a href="https://www.figma.com/proto/S2bPNuiNWchaeBx5N4rFDv/Furniture-Shop-Mobile-App-Design?type=design&node-id=430-166&t=6yZfh6SA19ECgE2j-1&scaling=scale-down&page-id=0%3A1&starting-point-node-id=410%3A27&mode=design" class="button button--flex button--small portfolio__button">
+                                    Demo
+                                    <i class="uil uil-arrow-right button__icon"></i>
+                                 </a>
+                            </div>
+                        </div>
+
+                         <!--==================== PORTFOLIO 4 ====================-->
+                        <div class="portfolio__content grid swiper-slide">
+                            <img src="assets/img/portfolio4.png" alt="portfolio4" class="portfolio__img">
+                            
+                            <div class="portfolio__data">
+                                <h3 class="portfolio__title">Smoothie Shop Website Design</h3>
+                                <p class="portfolio__description">Website designed for a online smoothie.</p>
+                                 <a href="https://www.figma.com/proto/iK0f78F5ViI86eZvoWb7q8/smoothie-shop?type=design&node-id=15-53&t=lke0AogzS6PFrEVz-1&scaling=scale-down&page-id=0%3A1&starting-point-node-id=1%3A94&mode=design" class="button button--flex button--small portfolio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
                                  </a>
