--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                                 <!--==================== QUALIFICATION 3 ====================-->
                                 <div class="qulification__data">
                                     <div>
-                                        <h3 class="qulification__title">B.Sc. ICT(Hon's)</h3>
+                                        <h3 class="qulification__title">Bachelor of ICT(Hon's)</h3>
                                         <span class="qulification__subtitle">University of Colombo</span>
                                         <div class="qulification__calender">
                                             <i class="uil uil-calendar-alt"></i>
